Adjustments to hero spacing and fixed header cutoff bug

--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -10,7 +10,7 @@ header {
   flex-direction: column;
   @include center-block;
   color: $white;
-  padding-bottom: 5vh;
+  padding-bottom: 2vh;
   padding-top: 5vh;
   position: relative;
   text-align: center;
@@ -19,7 +19,7 @@ header {
     border-left: $spacing--s solid transparent;
     border-right: $spacing--s solid transparent;
     border-top: $spacing--s solid $brand-secondary;
-    bottom: 0;
+    bottom: 2rem;
     height: 0;
     left: 50%;
     position: absolute;
@@ -29,7 +29,13 @@ header {
 
   img {
     max-width: 1200px;
-    margin: 1em auto 0 auto;
+    margin: 2em auto 0 auto;
+  }
+
+  h1 {
+    max-width: 1080px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   p {
@@ -97,14 +103,17 @@ header {
 }
 
 @media (min-width: 1200px) {
-  .hero-content {
-    max-width: 1200px;
-    p {
-      max-width: 75%;
+  .hero{
+    padding-bottom: 5vh;
+    padding-top: 10vh;
+
+    img {
+      margin-top: 5rem;
+      max-width: 1440px;
     }
-    > img {
-      max-width: 208px;
-      width: 40%;
+
+    p {
+      max-width: 800px;
     }
   }
 }
